wider to prevent start date label from wrapping

--- a/src/user/edit/inputs/Experience.scss
+++ b/src/user/edit/inputs/Experience.scss
@@ -1,6 +1,6 @@
 .nti-profile-experience-item {
 	display: grid;
-	grid-template-columns: 1fr 60px 60px;
+	grid-template-columns: 1fr 70px 70px;
 	grid-gap: 0.5rem 0.875rem;
 
 	&:not(:last-child) {
